优化从 SQLite 迁移到 PostgreSQL (#6264)